# induction-tanmmay

./: .gitignore  package.xml  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/coordinate_follower/lib/coordinate_follower/: follower_client.py  follower_server.py
install/coordinate_follower/share/coordinate_follower/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/coordinate_follower/share/coordinate_follower/action/: FollowTarget.action  FollowTarget.idl
install/turtle_controller/lib/turtle_controller/: turtle_publisher
install/turtle_controller/share/turtle_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
obstacle_avoider/: CMakeLists.txt
obstacle_avoider/scripts/: obstacle_avoid.py
src/aruco_navigation/: CMakeLists.txt  package.xml
src/aruco_navigation/launch/: world.launch.py
src/aruco_navigation/models/aruco_visual_marker_0/: model.sdf
src/aruco_navigation/models/aruco_visual_marker_1/: model.sdf
src/aruco_navigation/src/: aruco_navigator_node.py
src/aruco_navigation/worlds/: aruco_world.world
src/coordinate_follower/: CMakeLists.txt  package.xml
src/coordinate_follower/action/: FollowTarget.action
src/coordinate_follower/scripts/: coordinates.txt  follower_client.py  follower_server.py
src/obstacle_avoider/: package.xml
src/turtle_controller/: turtle_commander.py  turtle_publisher.py
(+57 files in other folders)
