<?xml version="1.0"?>
<package format="3">
  <name>aruco_navigation</name>
  <version>0.0.1</version>
  <description>State-machine navigator for TurtleBot3 using Gazebo and ArUco markers</description>
  <maintainer email="tanmmay15@gmail.com">tanmmay</maintainer>
  <license>BSD</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv4</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- Linting & test tools -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
